--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -357,6 +357,7 @@
 			</plugins>
 		</build>
 	</profile>
+
 	<profile>
 		<id>mssql-jdbc-store</id>
 		<dependencies>
@@ -416,5 +417,32 @@
       </plugins>
     </build>
   </profile>
+    <profile>
+        <id>codeCoverage</id>
+        <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <excludes>
+						  <!-- TODO breaks running with JaCoCo -->
+                          <exclude>**/ObjStoreBrowserTest.java</exclude>
+						  <!-- stress tests are not unit tests -->
+                          <exclude>**/LogStressTest2.java</exclude>
+                        </excludes>
+                        <systemProperties>
+                            <property>
+                                <name>com.arjuna.ats.arjuna.common.propertiesFile</name>
+                                <value>h2jbossts-properties.xml</value>
+                            </property>
+                        </systemProperties>
+
+                    </configuration>
+                </plugin>
+            </plugins>
+        </build>
+    </profile>
+
   </profiles>
 </project>
