JBTM-2093 Update to set the managementAddress property in arquillian.xml

--- a/blacktie/blacktie-admin-services/ear/pom.xml
+++ b/blacktie/blacktie-admin-services/ear/pom.xml
@@ -148,6 +148,9 @@
 						<groupId>org.jboss.as.plugins</groupId>
 						<artifactId>jboss-as-maven-plugin</artifactId>
 						<version>7.3.Final</version>
+						<configuration>
+							<hostname>${jbossas.ip.addr}</hostname>
+						</configuration>
 						<executions>
 							<execution>
 								<id>redeploy</id>
