[JBTM-2062] put test db in the project build folder

--- a/ArjunaJTA/spi/src/test/resources/db.properties
+++ b/ArjunaJTA/spi/src/test/resources/db.properties
@@ -23,7 +23,7 @@
 <!-- the 'native' driver -->
 <entry key="DB_H2_Driver">org.h2.Driver</entry>
 <!-- based on the non-xa driver class given above. -->
-<entry key="DB_H2_DatabaseURL">jdbc:h2:~/ceylondb</entry>
+<entry key="DB_H2_DatabaseURL">jdbc:h2:ceylondb</entry>
 <!-- username and pass -->
 <entry key="DB_H2_DatabaseUser">sa</entry>
 <entry key="DB_H2_DatabasePassword">sa</entry>
