Changing netty version for Wildfly in qa tests

--- a/qa/TaskImpl.properties
+++ b/qa/TaskImpl.properties
@@ -45,7 +45,7 @@ COMMAND_LINE_2=\
   ${path.separator}dbdrivers${file.separator}mysql-connector-java-5.1.8-bin.jar\
   ${path.separator}dbdrivers${file.separator}oracle_10_2_0_4${file.separator}ojdbc14.jar\
   ${path.separator}dbdrivers${file.separator}postgresql-8.3-605.jdbc4.jar\
-  ${path.separator}ext${file.separator}netty.jar
+  ${path.separator}ext${file.separator}netty-all.jar
 
 #
 # properties used by the tests or test framework:
